# fabric_cnc

./: .gitignore  CLAUDE.md  DXF_PROCESSOR_SUMMARY.md  EMI_TROUBLESHOOTING.md  LAUNCHER_README.md  README.md  README_REDESIGNED.md  REDESIGN_SUMMARY.md  TOOLPATH_IMPROVEMENTS.md  __main__.py  analyze_spline_file.py  animated_toolpath.py  check_dxf_scale.py  check_grbl_config.py  check_jog_step_size.py  config.py  config_manager.py  corner_analyzer.py  create_test_dxf.py  ctk_material_test.py  debug_circle_toolpath.py  debug_motor_movement.py  demo_toolpath.gcode  diagnose_pins.py  enhanced_visualizer.py  example_usage.py  export_dxf_coordinates.py  fabric-cnc-motor-test.desktop  fix_grbl_settings.py  fix_homing_issue.py  fix_position_sync.py  fix_probe_alarm.py  force_clear_alarm.py  formatted_test.dxf  gcode_simulator.py  grbl_diagnostic.py  hall_sensor_test.py  highlight_high_angles.py  install.sh  invert_limit_pins.py  (+63 more)
dxf_processing/: dxf_processor.py
fabric_cnc/: __init__.py  __main__.py  config.py
fabric_cnc/motor_control/: driver.py  motor_test_ui.py
gcode/: square_20250724_161851.gcode  square_20250728_161457.gcode  test4_20250723_164811.gcode  test_20250723_164704.gcode  test_20250724_161328.gcode  test_no_polyline_20250723_154829.gcode  test_no_polyline_20250723_155531.gcode  test_no_polyline_20250723_170813.gcode  test_no_polyline_20250723_173908.gcode  test_no_polyline_20250724_160551.gcode
motor_control/: __init__.py  driver.py  grbl_motor_controller.py  motor_controller.py  multi_axis_controller.py  smooth_motion_executor.py  step_by_step_executor.py  stepper_driver.py
outputs/: test_pipeline.gcode  test_pipeline.py  toolpath_test.gcode  toolpath_test_2.gcode  toolpath_test_no_polyline.gcode
src/fabric_cnc/: __init__.py  config.py  main_app.py
test_files/: test_arc.dxf  test_circle.dxf  test_complex.dxf  test_polyline.dxf  test_spline.dxf
tests/: test_motor_driver.py
toolpath_planning/: __init__.py  continuous_toolpath_generator.py  gcode_generator.py  gcode_visualizer.py  generate_gcode.py  motion_planner.py  toolpath_generator.py
(+12 files in other folders)
